--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -56,7 +56,7 @@
         "id": "YcGxibJO0wM8"
       },
       "id": "YcGxibJO0wM8",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -71,14 +71,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "cd96d52b-94bd-4554-9a8c-ff9af76e09a8",
       "metadata": {
         "id": "cd96d52b-94bd-4554-9a8c-ff9af76e09a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad3aa33d-2e37-44e0-bfb9-f8e441d26587"
+        "outputId": "4a9eee25-a2a7-4b3b-d39b-9af836b38810"
       },
       "outputs": [
         {
@@ -89,7 +89,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -109,13 +109,13 @@
       ],
       "metadata": {
         "id": "-vCUMM0OYA5k",
-        "outputId": "7ec11782-c967-4950-c1e7-744153055b7b",
+        "outputId": "d8978c81-314f-4d0d-bc7b-39c803aa045a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "-vCUMM0OYA5k",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,20 +125,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "0ec41419-b265-45f9-b1c9-f56aba6fe2f1",
       "metadata": {
         "id": "0ec41419-b265-45f9-b1c9-f56aba6fe2f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea6d2f39-d625-4dac-adcc-bfda4d85d83f"
+        "outputId": "e01baac5-d78d-4a38-ce53-3abead08319d"
       },
       "outputs": [
         {
@@ -200,7 +200,7 @@
         "id": "itTmD8VVZweC"
       },
       "id": "itTmD8VVZweC",
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -210,13 +210,13 @@
       ],
       "metadata": {
         "id": "5SLyXO8CZqVW",
-        "outputId": "ee900d88-bf1c-48e7-ce3e-f0dbab9120cf",
+        "outputId": "c34f8d06-2ed0-44ec-c6a2-9a42ba7c5a75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "5SLyXO8CZqVW",
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 6
         }
       ]
     },
@@ -242,48 +242,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
       "metadata": {
-        "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f"
+        "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
+        "outputId": "d7a1be2b-74fe-4228-89aa-2087e44e8289",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([24])\n",
+            "torch.Size([24])\n",
+            "torch.Size([28])\n"
+          ]
+        }
+      ],
+      "source": [
+        "# let's make the second input element acts as the query for computing the attention-vector\n",
+        "x_2 = embedded_sentence[1]\n",
+        "\n",
+        "query_2 = W_Q.matmul(x_2)\n",
+        "key_2 = W_K.matmul(x_2)\n",
+        "value_2 = W_V.matmul(x_2)\n",
+        "\n",
+        "print(query_2.shape)\n",
+        "print(key_2.shape)\n",
+        "print(value_2.shape)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
       "metadata": {
         "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
-        "outputId": "5299e405-e4a7-4f64-a9b9-3da7212afdde",
+        "outputId": "5faa853f-46ca-4c83-b944-cbc2a6f04ef2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(35000, 10000)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "keys shape: torch.Size([6, 24])\n",
+            "values shape: torch.Size([6, 28])\n"
+          ]
         }
       ],
       "source": [
-        "X_train.shape"
+        "# We can then generalize this to compute th remaining key\n",
+        "keys = W_K.matmul(embedded_sentence.T).T\n",
+        "values = W_V.matmul(embedded_sentence.T).T\n",
+        "\n",
+        "print(f\"keys shape: {keys.shape}\")\n",
+        "print(f\"values shape: {values.shape}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
       "metadata": {
         "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
-        "outputId": "842171b2-05b1-4deb-ff2d-d20fbc65ab64",
+        "outputId": "daafa5dd-6779-426e-fa23-dd140ca7ce60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -293,125 +321,117 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<1x10000 sparse matrix of type '<class 'numpy.int64'>'\n",
-              "\twith 74 stored elements in Compressed Sparse Row format>"
+              "tensor([[ 1.3274,  0.9452,  0.5531,  0.1000, -1.5909,  0.8779,  0.8645,  1.1643,\n",
+              "          2.2148,  1.3088,  0.8315, -1.5550, -0.2360,  2.0408, -0.3657,  1.7449,\n",
+              "          0.1180,  2.2120, -0.2037, -0.6591, -0.1771, -0.1563,  0.7547,  1.0151],\n",
+              "        [-0.0809, -1.2746, -2.3948, -0.3425,  1.5967,  0.5399,  0.9113,  0.0962,\n",
+              "          0.7300, -1.0553,  1.2533, -0.2113,  1.0208, -0.7470,  1.5171,  0.2773,\n",
+              "         -0.3173,  0.2698,  1.5237, -1.0970,  1.3849,  0.4400, -2.4926,  0.3594],\n",
+              "        [-2.1744, -2.7340, -1.0410, -1.8867, -4.0902, -0.3303, -3.1343, -2.4864,\n",
+              "         -1.1285, -3.5427, -4.7195, -6.1590, -0.9058, -3.2316, -1.3660, -3.5371,\n",
+              "         -2.7504, -2.3356, -1.2755, -3.0702, -2.3168,  0.4209, -2.5422, -3.8700],\n",
+              "        [-0.4005,  0.6766, -1.7351,  1.0082, -1.1248, -3.2161,  0.5959, -2.3485,\n",
+              "         -1.7592, -1.2618, -1.8644, -0.5954, -1.4934, -3.0239,  0.3801, -1.9108,\n",
+              "         -0.6866, -2.1498, -1.9909, -0.8837, -1.6336, -2.1131, -0.4434, -0.1749],\n",
+              "        [ 1.1230,  1.3014,  0.7475,  0.2554, -2.3979, -0.9883, -1.1096, -1.3873,\n",
+              "          0.9164, -2.3064, -2.7067, -3.1677, -1.4181, -1.0188, -0.8252,  1.0323,\n",
+              "         -2.0219, -0.7073, -0.7288, -2.5216, -2.8680, -0.9919, -0.9798, -1.2008],\n",
+              "        [ 2.1795,  4.3551,  1.7887,  3.0898,  1.5155,  3.2049,  2.5387,  2.0061,\n",
+              "          1.2701,  2.4616,  2.2505,  3.6273,  2.9122,  0.9838,  3.3078,  2.7714,\n",
+              "          3.6295,  1.1091,  3.0613,  2.8257,  1.8345,  1.8981,  0.4260,  1.3638]],\n",
+              "       grad_fn=<PermuteBackward0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 11
         }
       ],
       "source": [
-        "X_train[0]"
+        "keys"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
       "metadata": {
         "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
-        "outputId": "2905ae37-72dc-471e-e1b0-1314bd72c0b8",
+        "outputId": "610fb019-25fe-40fd-af34-54f5477e805d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 0, ..., 0, 0, 0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(11.1466, grad_fn=<DotBackward0>)\n"
+          ]
         }
       ],
       "source": [
-        "np.array(X_train[0].todense())[0]"
+        "# let's compute the unnormalized attention weight for the query and 5th input element\n",
+        "omega_24 = query_2.dot(keys[4])\n",
+        "print(omega_24)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
       "metadata": {
         "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
-        "outputId": "75140cb7-4028-464e-a3a6-78f605c65948",
+        "outputId": "d6a8e1ea-b918-48c9-9bbb-64d8ae6f8f81",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([9926,   67,    5,    0,    1,    0,    1])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 8.5808, -7.6597,  3.2558,  1.0395, 11.1466, -0.4800],\n",
+            "       grad_fn=<SqueezeBackward4>)\n"
+          ]
         }
       ],
       "source": [
-        "np.bincount(np.array(X_train[0].todense())[0])"
+        "# let’s compute the ω values for all input\n",
+        "omega_2 = query_2.matmul(keys.T)\n",
+        "print(omega_2)"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "23e6a768-8fa8-444c-8bba-3c3797229a53",
-      "metadata": {
-        "id": "23e6a768-8fa8-444c-8bba-3c3797229a53",
-        "outputId": "d44190bd-53b5-4996-94e8-17f52ccf6bf3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "matrix([[0, 0, 0, ..., 0, 0, 0]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "X_train[0].todense().flatten()"
-      ]
+        "##4) Computing Attention Scores"
+      ],
+      "metadata": {
+        "id": "1p5zLcNOGj8F"
+      },
+      "id": "1p5zLcNOGj8F"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UbozZ3ZSGmjF"
+      },
+      "id": "UbozZ3ZSGmjF",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "ae181592-134d-4cff-983f-90d6fcae5068",
       "metadata": {
-        "id": "ae181592-134d-4cff-983f-90d6fcae5068",
-        "outputId": "634fbec1-7424-4ee0-da8a-34a064539852",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ae181592-134d-4cff-983f-90d6fcae5068"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(35000, 10000)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ],
-      "source": [
-        "np.array(X_train.todense()).shape"
-      ]
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
