--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9Z/GdtsWFNOpt7y7PAMld",
+      "authorship_tag": "ABX9TyMoLugntq9rHvfWtGJvoO0A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3459,9 +3459,200 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class PositionalEncoding(nn.Module):\n",
+        "  def __init__(self, max_len, d_model):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.d_model = d_model\n",
+        "    position_encoding = torch.zeros(max_len, d_model)\n",
+        "    position = torch.arange(0, max_len).float().unsqueeze(1)\n",
+        "    angular_speed = torch.exp(torch.arange(0, d_model, 2).float() * (-np.log(10000.0) / d_model))\n",
+        "\n",
+        "    # even dimensions\n",
+        "    position_encoding[:, 0::2] = torch.sin(angular_speed * position)\n",
+        "    # odd dimensions\n",
+        "    position_encoding[:, 1::2] = torch.cos(angular_speed * position)\n",
+        "    # define an attribute of the module\n",
+        "    self.register_buffer(\"position_encoding\", position_encoding.unsqueeze(0))\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # x is N, L, D\n",
+        "    # pe is 1, maxlen, D\n",
+        "    # scaling the input before adding the positional encoding\n",
+        "    scaled_x = X * np.sqrt(self.d_model)\n",
+        "    encoded = scaled_x + self.position_encoding[:, :X.size(1), :]\n",
+        "    return encoded"
+      ],
       "metadata": {
         "id": "1ODUmB6kaDzh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####5.) Encoder \"Layer\""
+      ],
+      "metadata": {
+        "id": "s5QfEwXhWsXt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class EncoderLayer(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, ff_units, dropout=0.1):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
+        "\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, dropout)\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Dropout(dropout),\n",
+        "        nn.Linear(ff_units, d_model)\n",
+        "    )\n",
+        "    self.sub_layers = nn.ModuleList([SubLayerWrapper(d_model, dropout) for _ in range(2)])\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    # SubLayer 0 - Self-Attention\n",
+        "    attention = self.sub_layers[0](query, sublayer=self.self_attention_heads, is_self_attention=True, mask=mask)\n",
+        "\n",
+        "    # SubLayer 1 - FFN\n",
+        "    output = self.sub_layers[1](attention, sublayer=self.feed_forward_network)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "M6M1XMwVWw-K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####6.) Decoder \"Layer\""
+      ],
+      "metadata": {
+        "id": "WdVqFXTDZujt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DecoderLayer(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, ff_units, dropout=0.1):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
+        "\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, dropout=dropout)\n",
+        "    self.cross_attention_heads = MultiHeadAttention(n_heads, d_model, dropout=dropout)\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Dropout(dropout),\n",
+        "        nn.Linear(ff_units, d_model)\n",
+        "    )\n",
+        "    self.sub_layers = nn.ModuleList([SubLayerWrapper(d_model, dropout) for _ in range(3)])\n",
+        "\n",
+        "  def init_keys(self, states):\n",
+        "    self.cross_attention_heads.init_keys(states)\n",
+        "\n",
+        "  def forward(self, query, source_mask=None, target_mask=None):\n",
+        "    # SubLayer 0 - Masked Self-Attention\n",
+        "    attention1 = self.sub_layers[0](query, mask=target_mask, sublayer=self.self_attention_heads, is_self_attention=True)\n",
+        "\n",
+        "    # SubLayer 1 - Cross-Attention\n",
+        "    attention2 = self.sub_layers[1](attention1, mask=source_mask, sublayer=self.cross_attention_heads)\n",
+        "\n",
+        "    # SubLayer 2 - FFN\n",
+        "    output = self.sub_layers[2](attention2, sublayer=self.feed_forward_network)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "VCFRqyAaZw0d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####7.) \"Sub-Layer\" Wrapper"
+      ],
+      "metadata": {
+        "id": "N5KHDNQ1cB-d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The \"sub-layer\" wrapper implements the norm-first approach to wrapping \"sublayers.\"\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/sublayer.png?raw=1)\n",
+        "\n",
+        "It normalizes the inputs, calls the \"sub-layer\" itself (passed as argument), applies\n",
+        "dropout, and adds the residual connection at the end:"
+      ],
+      "metadata": {
+        "id": "oXyU7dXycECC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SubLayerWrapper(nn.Module):\n",
+        "  def __init__(self, d_model, dropout):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.norm = nn.LayerNorm(d_model)\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self, x, sublayer, is_self_attention=False, **kwargs):\n",
+        "    norm_x = self.norm(x)\n",
+        "    if is_self_attention:\n",
+        "      sublayer.init_keys(norm_x)\n",
+        "    # Calls Multi-Headed Attention (8) (and the feed-forward network as well, depending on the sublayer argument)\n",
+        "    output = x + self.dropout(sublayer(norm_x, **kwargs))\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "CPGoJ5Bed1gY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####8.) Multi-Headed Attention"
+      ],
+      "metadata": {
+        "id": "A1cpoaaifQIQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "PyvSrgsTfTS6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eBSrCa9DfTj-"
       },
       "execution_count": null,
       "outputs": []
