--- a/deep-learning-from-scratch/01_foundations.ipynb
+++ b/deep-learning-from-scratch/01_foundations.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMW0xj3vgbB8iuhUwKW9ZT7",
+      "authorship_tag": "ABX9TyOgEBYHh9BJ1ek3rmIDpGRB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "vmzdNDEKObVK"
       },
-      "execution_count": 59,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "kycFbxDROeTL"
       },
-      "execution_count": 60,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "9gTU-EFnh2Ra"
       },
-      "execution_count": 61,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -120,9 +120,9 @@
           "height": 492
         },
         "id": "J3LOcES5ijNu",
-        "outputId": "535dbbbe-f9d9-460d-917d-6121a86cacb3"
+        "outputId": "a85b21be-a23d-4811-e058-e455b585078c"
       },
-      "execution_count": 62,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "dZKt__k1jxrz"
       },
-      "execution_count": 63,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "TJIle6admD8y"
       },
-      "execution_count": 64,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "nbiChkJhm3Gp"
       },
-      "execution_count": 65,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "7RVxKAIyncA4"
       },
-      "execution_count": 66,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "8q6BV6aopZJa"
       },
-      "execution_count": 67,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "yt2w2SJ5rRdb"
       },
-      "execution_count": 68,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -310,7 +310,7 @@
       "metadata": {
         "id": "5IneREBNr0z9"
       },
-      "execution_count": 69,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -336,12 +336,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 481
+          "height": 0
         },
         "id": "tt3GWwXcsLYU",
-        "outputId": "0703cff5-d751-4fdc-c2b2-7f57d8c8b03c"
+        "outputId": "02bf9fa4-0eb1-4425-d842-7a34f9ae587c"
       },
-      "execution_count": 70,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -409,7 +409,7 @@
       "metadata": {
         "id": "ero4HrNn3zxP"
       },
-      "execution_count": 71,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "5kgvZ8zhnpjG"
       },
-      "execution_count": 72,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "kVYzJJ7kPhTV"
       },
-      "execution_count": 73,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -471,13 +471,13 @@
       ],
       "metadata": {
         "id": "L3BtG7tKOhob",
-        "outputId": "e95c4523-7011-4ac4-9f37-de8b68a1c3cf",
+        "outputId": "f1d5954b-5113-42fa-f5c0-27fdc17fe76f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 486
+          "height": 0
         }
       },
-      "execution_count": 74,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -501,10 +501,81 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "$$ f(x, y) = s$$\n",
+        "\n",
+        "$$ a = a(x, y) = x + y $$\n",
+        "\n",
+        "$$ s = \\sigma(a) $$\n",
+        "\n",
+        "$$ f(x, y) = s(a(x, y)) $$\n",
+        "\n",
+        "$$ \\frac{\\partial f}{\\partial x} = \\frac{\\partial \\sigma}{\\partial u}(a(x, y)) * \\frac{\\partial a}{\\partial x}((x, y)) \\\\ = \\frac{\\partial \\sigma}{\\partial u}(x + y) * \\frac{\\partial a}{\\partial x}((x, y))$$"
+      ],
+      "metadata": {
+        "id": "7zk8JTFLhO3S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def forward(x: ndarray, y: ndarray, sigma: array_func) -> float:\n",
+        "  \"\"\"Function with multiple inputs and addition, forward pass\"\"\"\n",
+        "  assert x.shape == y.shape\n",
+        "\n",
+        "  a = x + y\n",
+        "  return sigma(a)"
+      ],
+      "metadata": {
+        "id": "-KFzjO49pLSW"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def backward(x: ndarray, y: ndarray, sigma: array_func) -> float:\n",
+        "  \"\"\"Computes the derivative of this simple function with respect to both inputs\"\"\"\n",
+        "  assert x.shape == y.shape\n",
+        "\n",
+        "  # Compute \"forward pass\"\n",
+        "  a = x + y\n",
+        "  # Compute derivatives\n",
+        "  dsda = derivative(sigma, a)\n",
+        "\n",
+        "  dadx, dady = 1, 1\n",
+        "\n",
+        "  return dsda * dadx * dsda * dady"
+      ],
+      "metadata": {
+        "id": "SYP8_VemiEsh"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Vector Input Functions"
+      ],
+      "metadata": {
+        "id": "AFzsRWz2jlz9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "HRlqxAi1joN0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-KFzjO49pLSW"
+        "id": "7O7YB5BQjocs"
       },
       "execution_count": null,
       "outputs": []
