--- a/deep-learning-basics/cross_entropy_loss.ipynb
+++ b/deep-learning-basics/cross_entropy_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMAKosoaD/n8V4XLFvT3Ua6",
+      "authorship_tag": "ABX9TyNtBytggL8mYjcWMFXtsLlJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,11 @@
         "\n",
         "In binary classification, the sigmoid activation is used in the output layer and the neural network outputs a probability score `(p)` between 0 and 1.\n",
         "\n",
-        "In case of multiclass classification, we use the softmax activation at the output layer to get a vector of predicted probabilities `p`."
+        "In case of multiclass classification, we use the softmax activation at the output layer to get a vector of predicted probabilities `p`.\n",
+        "\n",
+        "**Reference**:\n",
+        "\n",
+        "[Cross-Entropy Loss: Make Predictions with Confidence](https://www.pinecone.io/learn/cross-entropy-loss/)"
       ],
       "metadata": {
         "id": "NBMKJywMsGVi"
@@ -289,12 +293,12 @@
         "plt.ylabel('Binary Cross-Entropy Loss')"
       ],
       "metadata": {
-        "id": "K-xycrwxygI6",
-        "outputId": "8435096f-7b2e-496c-808d-635eb364c114",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 481
-        }
+        },
+        "id": "K-xycrwxygI6",
+        "outputId": "8435096f-7b2e-496c-808d-635eb364c114"
       },
       "execution_count": 9,
       "outputs": [
