--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -48,6 +48,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import torch\n",
+        "import torch.nn.functional as F\n",
         "\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from torch.utils.data import Dataset, DataLoader"
@@ -78,7 +79,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a9eee25-a2a7-4b3b-d39b-9af836b38810"
+        "outputId": "8d149d5e-86bd-4207-fb72-ac4c77f442c1"
       },
       "outputs": [
         {
@@ -109,7 +110,7 @@
       ],
       "metadata": {
         "id": "-vCUMM0OYA5k",
-        "outputId": "d8978c81-314f-4d0d-bc7b-39c803aa045a",
+        "outputId": "67ec887a-5ce0-4125-c232-cecde8cac198",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -138,7 +139,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e01baac5-d78d-4a38-ce53-3abead08319d"
+        "outputId": "f69acecc-a05d-4789-d378-c70c681c0815"
       },
       "outputs": [
         {
@@ -210,7 +211,7 @@
       ],
       "metadata": {
         "id": "5SLyXO8CZqVW",
-        "outputId": "c34f8d06-2ed0-44ec-c6a2-9a42ba7c5a75",
+        "outputId": "d3800b46-809a-46da-9b97-fd2049e19419",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -242,11 +243,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
       "metadata": {
         "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
-        "outputId": "d7a1be2b-74fe-4228-89aa-2087e44e8289",
+        "outputId": "62c7e4ff-6912-4a61-c7e4-6a67459bd693",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -277,11 +278,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
       "metadata": {
         "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
-        "outputId": "5faa853f-46ca-4c83-b944-cbc2a6f04ef2",
+        "outputId": "a48db226-7487-43d1-a43b-b4026e47ac07",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -307,11 +308,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
       "metadata": {
         "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
-        "outputId": "daafa5dd-6779-426e-fa23-dd140ca7ce60",
+        "outputId": "51a64083-fa04-432e-a0e6-a46ab9294c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -343,7 +344,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ],
       "source": [
@@ -352,11 +353,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
       "metadata": {
         "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
-        "outputId": "610fb019-25fe-40fd-af34-54f5477e805d",
+        "outputId": "03687442-0918-460b-e424-d40c64c62274",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -378,11 +379,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
       "metadata": {
         "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
-        "outputId": "d6a8e1ea-b918-48c9-9bbb-64d8ae6f8f81",
+        "outputId": "5b13a206-b337-49c2-fb93-72efbb689017",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -415,23 +416,118 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "attention_weights_2 = F.softmax(omega_2 / d_k ** 0.5, dim=0)\n",
+        "print(attention_weights_2)"
+      ],
       "metadata": {
-        "id": "UbozZ3ZSGmjF"
+        "id": "UbozZ3ZSGmjF",
+        "outputId": "14345a2c-4b37-410c-b1a5-d7073f1e2232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "UbozZ3ZSGmjF",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.2912, 0.0106, 0.0982, 0.0625, 0.4917, 0.0458],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##5) Computing Context Vector"
+      ],
+      "metadata": {
+        "id": "_Cfr8RnLp34-"
+      },
+      "id": "_Cfr8RnLp34-"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "ae181592-134d-4cff-983f-90d6fcae5068",
       "metadata": {
-        "id": "ae181592-134d-4cff-983f-90d6fcae5068"
+        "id": "ae181592-134d-4cff-983f-90d6fcae5068",
+        "outputId": "5bb34d17-a431-482d-acc4-e1e7c0a2c207",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([28])\n",
+            "tensor([-1.5993,  0.0156,  1.2670,  0.0032, -0.6460, -1.1407, -0.4908, -1.4632,\n",
+            "         0.4747,  1.1926,  0.4506, -0.7110,  0.0602,  0.7125, -0.1628, -2.0184,\n",
+            "         0.3838, -2.1188, -0.8136, -1.5694,  0.7934, -0.2911, -1.3640, -0.2366,\n",
+            "        -0.9564, -0.5265,  0.0624,  1.7084], grad_fn=<SqueezeBackward4>)\n"
+          ]
+        }
+      ],
+      "source": [
+        "context_vector_2 = attention_weights_2.matmul(values)\n",
+        "\n",
+        "print(context_vector_2.shape)\n",
+        "print(context_vector_2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (1x6)(6x28) = (1x28)\n",
+        "attention_weights_2.shape, values.shape, context_vector_2.shape"
+      ],
+      "metadata": {
+        "id": "CxfOCNguqbtF",
+        "outputId": "d7a9d4dd-ed9b-4676-b979-b595915e195b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "CxfOCNguqbtF",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([6]), torch.Size([6, 28]), torch.Size([28]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##6) Multi-Head Attention"
+      ],
+      "metadata": {
+        "id": "yN-Vqe-3rCbg"
+      },
+      "id": "yN-Vqe-3rCbg"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1j_PgpHMrFng"
+      },
+      "id": "1j_PgpHMrFng",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
